--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,18 +1,23 @@
-<table id="blogs-table">
-	<thead>
-    <tr>
-      <th>Author</th>
-      <th>Title</th>
-      <th>Details</th>
-    </tr> 
-  </thead>
-  <tbody>
-    <% @blogs.each do |blog| %>
+<h1>
+  Found <%= @blog_count %> results
+</h1>
+<% if @blog_count > 0 %>
+  <table id="blogs-table">
+  	<thead>
       <tr>
-        <td><%= blog.author %></td>
-        <td><%= link_to blog.title, blog_path(blog.id) %></td>
-        <td><%= blog.details %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <th>Author</th>
+        <th>Title</th>
+        <th>Details</th>
+      </tr> 
+    </thead>
+    <tbody>
+      <% @blogs.each do |blog| %>
+        <tr>
+          <td><%= blog.author %></td>
+          <td><%= link_to blog.title, blog_path(blog.id) %></td>
+          <td><%= blog.details %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% end %>
