--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,11 @@
 <div class='app-header'>
+  <div id='blog-logo'>
+    <%= link_to 'Medium Crawler', root_path %>
+  </div>
   <%= form_tag blogs_path do %>
     <div>
-      <div id='blog-logo'>
-        <%= link_to 'Medium Crawler', root_path %>
-      </div>
       <div class='blog-search'>
-        <%= text_field '', 'tag', placeholder: 'Search a tag', class: 'blog-text-input' %>
+        <%= text_field '', 'tag', placeholder: 'Search tags...', class: 'blog-text-input' %>
         <%= submit_tag "Submit", 'data-disable-with' => 'Crawling..' %>
       </div>
     </div>
